welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:27: error: ')' expected but 'else' found.
	else if(msg=="R"){
        ^